# nx

./: .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
doc/: nx-features.md
src/: cli.rs  main.rs
src/commands/: config.rs  gc.rs  generate.rs  install.rs  list.rs  mod.rs  optimize.rs  remove.rs  search.rs  system.rs  update.rs
src/commands/generate/: expression.rs  fetcher.rs  mod.rs
src/config/: store.rs
src/utils/: command.rs  mod.rs  package.rs
