[package]
name = "nx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.4.1"
clap = { version = "4.5.20", features = ["derive"] }
directories = "5.0.1"
inquire = "0.7.5"
rfd = "0.15.0"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
